[tool.poetry]
name = "caption_downloader"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
google-auth-oauthlib = "^0.4.2"
google-api-python-client = "^1.12.8"
Flask = "^1.1.2"
requests = "^2.25.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
